# agent_top

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md
crates/agent_top_core/: Cargo.toml
crates/agent_top_core/src/: lib.rs
desktop/: package-lock.json  package.json
desktop/scripts/: capture_ui.ps1
desktop/src/: app.ts  app_shell.test.ts  app_shell.ts  dom.ts  main.ts  session_state.test.ts  session_state.ts  style.css  tauri_api.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  runtime.rs  storage.rs
docs/: desktop-refactor-and-session-redesign-plan.md
src/: main.rs
