[package]
name = "agent_top_desktop"
version = "0.1.0"
description = "Desktop shell for agent_top"
authors = ["Josh Schuler"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agent_top_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
agent_top_core = { path = "../../crates/agent_top_core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tempfile = "3.23"
